--- a/AsianPaint/test-output/old/Default suite/methods-alphabetical.html
+++ b/AsianPaint/test-output/old/Default suite/methods-alphabetical.html
@@ -1,10 +1,46 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="8764ef">  <td>21/07/09 17:15:06</td>   <td>0</td> <td>&nbsp;</td><td title="&lt;&lt;MyProfileTestNG.afterTest()[pri:0, instance:testNG.MyProfileTestNG@32ee6fee]">&lt;&lt;afterTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2108763062</td>   <td></td> </tr>
-<tr bgcolor="8764ef">  <td>21/07/09 17:14:59</td>   <td>-7028</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="MyProfileTestNG.f()[pri:0, instance:testNG.MyProfileTestNG@32ee6fee]">f</td> 
-  <td>main@2108763062</td>   <td></td> </tr>
-<tr bgcolor="8764ef">  <td>21/07/09 17:14:15</td>   <td>-51350</td> <td>&nbsp;</td><td title="&gt;&gt;MyProfileTestNG.launchApplication()[pri:0, instance:testNG.MyProfileTestNG@32ee6fee]">&gt;&gt;launchApplication</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2108763062</td>   <td></td> </tr>
+<tr bgcolor="889b97">  <td>21/07/14 18:34:34</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AsianPaintTestNG.closeApplication()[pri:0, instance:testNG.AsianPaintTestNG@4d0f2471]">&lt;&lt;closeApplication</td> 
+<td>&nbsp;</td>  <td>main@480490520</td>   <td></td> </tr>
+<tr bgcolor="889b97">  <td>21/07/14 18:34:34</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AsianPaintTestNG.closeApplication()[pri:0, instance:testNG.AsianPaintTestNG@4d0f2471]">&lt;&lt;closeApplication</td> 
+<td>&nbsp;</td>  <td>main@480490520</td>   <td></td> </tr>
+<tr bgcolor="889b97">  <td>21/07/14 18:34:34</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AsianPaintTestNG.closeApplication()[pri:0, instance:testNG.AsianPaintTestNG@4d0f2471]">&lt;&lt;closeApplication</td> 
+<td>&nbsp;</td>  <td>main@480490520</td>   <td></td> </tr>
+<tr bgcolor="889b97">  <td>21/07/14 18:34:34</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AsianPaintTestNG.closeApplication()[pri:0, instance:testNG.AsianPaintTestNG@4d0f2471]">&lt;&lt;closeApplication</td> 
+<td>&nbsp;</td>  <td>main@480490520</td>   <td></td> </tr>
+<tr bgcolor="889b97">  <td>21/07/14 18:34:34</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AsianPaintTestNG.closeApplication()[pri:0, instance:testNG.AsianPaintTestNG@4d0f2471]">&lt;&lt;closeApplication</td> 
+<td>&nbsp;</td>  <td>main@480490520</td>   <td></td> </tr>
+<tr bgcolor="889b97">  <td>21/07/14 18:34:34</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AsianPaintTestNG.closeApplication()[pri:0, instance:testNG.AsianPaintTestNG@4d0f2471]">&lt;&lt;closeApplication</td> 
+<td>&nbsp;</td>  <td>main@480490520</td>   <td></td> </tr>
+<tr bgcolor="889b97">  <td>21/07/14 18:34:34</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AsianPaintTestNG.closeApplication()[pri:0, instance:testNG.AsianPaintTestNG@4d0f2471]">&lt;&lt;closeApplication</td> 
+<td>&nbsp;</td>  <td>main@480490520</td>   <td></td> </tr>
+<tr bgcolor="889b97">  <td>21/07/14 18:29:53</td>   <td>-281067</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AsianPaintTestNG.editProfile(java.lang.String,java.lang.String,java.lang.String)[pri:3, instance:testNG.AsianPaintTestNG@4d0f2471]">editProfile</td> 
+  <td>main@480490520</td>   <td></td> </tr>
+<tr bgcolor="889b97">  <td>21/07/14 18:32:05</td>   <td>-149159</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AsianPaintTestNG.invalidDigitsMobileNumber(java.lang.String)[pri:4, instance:testNG.AsianPaintTestNG@4d0f2471]">invalidDigitsMobileNumber</td> 
+  <td>main@480490520</td>   <td></td> </tr>
+<tr bgcolor="889b97">  <td>21/07/14 18:32:05</td>   <td>-149159</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AsianPaintTestNG.invalidDigitsMobileNumber(java.lang.String)[pri:4, instance:testNG.AsianPaintTestNG@4d0f2471]">invalidDigitsMobileNumber</td> 
+  <td>main@480490520</td>   <td></td> </tr>
+<tr bgcolor="889b97">  <td>21/07/14 18:33:40</td>   <td>-54288</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AsianPaintTestNG.invalidLeasThanDigitMobileNumber(java.lang.String)[pri:5, instance:testNG.AsianPaintTestNG@4d0f2471]">invalidLeasThanDigitMobileNumber</td> 
+  <td>main@480490520</td>   <td></td> </tr>
+<tr bgcolor="889b97">  <td>21/07/14 18:33:42</td>   <td>-52704</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AsianPaintTestNG.launchApplication()[pri:0, instance:testNG.AsianPaintTestNG@4d0f2471]">&gt;&gt;launchApplication</td> 
+<td>&nbsp;</td>  <td>main@480490520</td>   <td></td> </tr>
+<tr bgcolor="889b97">  <td>21/07/14 18:33:42</td>   <td>-52704</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AsianPaintTestNG.launchApplication()[pri:0, instance:testNG.AsianPaintTestNG@4d0f2471]">&gt;&gt;launchApplication</td> 
+<td>&nbsp;</td>  <td>main@480490520</td>   <td></td> </tr>
+<tr bgcolor="889b97">  <td>21/07/14 18:33:42</td>   <td>-52704</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AsianPaintTestNG.launchApplication()[pri:0, instance:testNG.AsianPaintTestNG@4d0f2471]">&gt;&gt;launchApplication</td> 
+<td>&nbsp;</td>  <td>main@480490520</td>   <td></td> </tr>
+<tr bgcolor="889b97">  <td>21/07/14 18:33:42</td>   <td>-52704</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AsianPaintTestNG.launchApplication()[pri:0, instance:testNG.AsianPaintTestNG@4d0f2471]">&gt;&gt;launchApplication</td> 
+<td>&nbsp;</td>  <td>main@480490520</td>   <td></td> </tr>
+<tr bgcolor="889b97">  <td>21/07/14 18:33:42</td>   <td>-52704</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AsianPaintTestNG.launchApplication()[pri:0, instance:testNG.AsianPaintTestNG@4d0f2471]">&gt;&gt;launchApplication</td> 
+<td>&nbsp;</td>  <td>main@480490520</td>   <td></td> </tr>
+<tr bgcolor="889b97">  <td>21/07/14 18:33:42</td>   <td>-52704</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AsianPaintTestNG.launchApplication()[pri:0, instance:testNG.AsianPaintTestNG@4d0f2471]">&gt;&gt;launchApplication</td> 
+<td>&nbsp;</td>  <td>main@480490520</td>   <td></td> </tr>
+<tr bgcolor="889b97">  <td>21/07/14 18:33:42</td>   <td>-52704</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AsianPaintTestNG.launchApplication()[pri:0, instance:testNG.AsianPaintTestNG@4d0f2471]">&gt;&gt;launchApplication</td> 
+<td>&nbsp;</td>  <td>main@480490520</td>   <td></td> </tr>
+<tr bgcolor="889b97">  <td>21/07/14 18:26:57</td>   <td>-457741</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AsianPaintTestNG.myProfile()[pri:1, instance:testNG.AsianPaintTestNG@4d0f2471]">myProfile</td> 
+  <td>main@480490520</td>   <td></td> </tr>
+<tr bgcolor="889b97">  <td>21/07/14 18:34:33</td>   <td>-994</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AsianPaintTestNG.signoutApplication()[pri:6, instance:testNG.AsianPaintTestNG@4d0f2471]">signoutApplication</td> 
+  <td>main@480490520</td>   <td></td> </tr>
+<tr bgcolor="889b97">  <td>21/07/14 18:28:27</td>   <td>-366763</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AsianPaintTestNG.uploadProfile()[pri:2, instance:testNG.AsianPaintTestNG@4d0f2471]">uploadProfile</td> 
+  <td>main@480490520</td>   <td></td> </tr>
 </table>
